--- a/resources/assets/sass/components/about.scss
+++ b/resources/assets/sass/components/about.scss
@@ -11,7 +11,7 @@
       left: 200px;
       opacity: 0;
       transition: all .8s ease .5s;
-      background: url('../../img/about.jpg') center center;
+      background: url('/assets/img/about.jpg') center center;
       background-size: cover;
       width: 600px;
       height: 450px;
