--- a/resources/assets/sass/components/intro.scss
+++ b/resources/assets/sass/components/intro.scss
@@ -62,7 +62,7 @@
     }
 
     &.intro__layer--picture {
-      background: url('../../img/baksteen.png') left top;
+      background: url('/assets/img/baksteen.png') left top;
       background-size: cover;
       transition: 1.2s $easing-out 1s;
 
